--- a/index.html
+++ b/index.html
@@ -4,19 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Github</title>
+    <title>Vanilla App</title>
     <link rel="stylesheet" href="src/style.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   </head>
   <body>
-    <h1>Hosting</h1>
-
-    <button type="button" class="btn btn-primary">Click Here</button>
-    <img src="src/frontend dev.jpeg" alt="" />
+    <div class="container">
+      <div class="weather-app">
+        <h1 id="page-title">Weather Forecast</h1>
+        <form action="">
+          <input type="search" id="search-form" />
+          <button type="button" class="btn btn-primary">Search</button>
+        </form>
+        <div class="col-9">
+          <div class="row row-1">
+            <h2 class="city-name" id="city-name">City Name</h2>
+            <ul>
+              <li>Date</li>
+              <li>Weather Conditions</li>
+              <li>Temperature</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
   <script src="src/file.js"></script>
 </html>
