Added open-source link and removed underline from the link.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </div>
       </div>
     </div>
+    <small><a href="https://github.com/Darraneica/shecodes-week6" target="_blank">Open-Source code </a>by Darraneica Robinson</small>
   </body>
   <script src="src/file.js"></script>
 </html>
